2003-08-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Check gcc_select when the GCC field is present,
	and exit with an error if the wrong version of gcc has been selected.

2003-08-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Disable the prebinding code unless the distribution
	is > 10.2.
	* Bootstrap.pm, SelfUpdate.pm: Add gettext-bin to the bootstrap and
	update lists (in preparation for making it non-essential)
	* Bootstrap.pm: Move the code which enables the 10.3 distribution to
	a new branch, "test_10_3"
	
2003-07-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Don't print the output of linking the
	-single_module test we only care about pass/fail.

2003-07-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm, SelfUpdate.pm: Add bzip2-dev, gettext-dev, 
	libiconv-dev, ncurses-dev to the bootstrap and update lists

2003-07-14  Max Horn  <max@quendi.de>

	* VirtPackage.pm: Explicitly check for the existence of 'what' and 'cc'
	before invoking them. This is necessary for the PDB, which runs on a
	non-darwin system currently, but also for any system which has no compiler.

2003-07-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: switch from BSD tar to /bin/pax for the
	implementation of TarFilesRename.

2003-07-06  Peter O'Gorman <ogorman@users.sourceforge.net>

	* VirtPackage.pm, Config.pm, Engine.pm, Package.pm, PkgVersion.pm, 
	Bootstrap.pm, Status.pm:
	Move all virtual package stuff to one file, add fink-virtual-pkgs file.

2003-07-05  Dave Morrison <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Revision of "Type: perl" to handle changes in 5.8.0
	(thanks to JF Mertens)

2003-07-04  Peter O'Gorman <ogorman@users.sourceforge.net>

	* Validation.pm: Check for hardcoded /sw in the scripts and set fields.

2003-07-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Removed some unnecessary debug stuff
