@@ -985,14 +985,6 @@ sub phase_unpack {
 		return;
 	}
 
-	my ($gcc);
-	my %gcchash = ('2.95.2' => '2', '2.95' => '2', '3.1' => '3');
-
-	if ($self->has_param("GCC")) {
-	    $gcc = $self->param("GCC");
-	    die "\n\nYou have the wrong version of gcc selected; run the command\n\n     sudo gcc_select " . $gcchash{$gcc} . "\n\n(and/or install a more recent version of the Developer Tools)\nto correct this problem.\n" unless (`gcc_select` =~ /version\ $gcc/);
-	}
-
 	$bdir = $self->get_fullname();
 
 	$verbosity = "";
@@ -1035,14 +1027,15 @@ sub phase_unpack {
 		$checksum = $self->get_checksum($i);
 		if ($checksum ne "-" ) { # Checksum was specified 
 		# compare to the MD5 checksum of the tarball
-			if ($checksum ne &file_MD5_checksum($found_archive)) {
+			my  $found_archive_sum = &file_MD5_checksum($found_archive);
+			if ($checksum ne $found_archive_sum) {
 				# mismatch, ask user what to do
 				$tries++;
-				
 				&print_breaking("The checksum of the file $archive of package ".
 								$self->get_fullname()." is incorrect. The most likely ".
-								"cause for this is a corrupted or incomplete ".
-								"download. It is recommended that you download it ".
+								"cause for this is a corrupted or incomplete download\n".
+								"Expected: $checksum \nActual: $found_archive_sum \n".
+								"It is recommended that you download it ".
 								"again. How do you want to proceed?");
 				$answer =
 					&prompt_selection("Make your choice: ",
@@ -1244,7 +1237,7 @@ sub phase_patch {
 
 sub phase_compile {
 	my $self = shift;
-	my ($dir, $compile_script, $cmd, $gcc);
+	my ($dir, $compile_script, $cmd);
 
 	if ($self->{_type} eq "bundle") {
 		return;
@@ -1257,7 +1250,6 @@ sub phase_compile {
 		($self->{parent})->phase_compile();
 		return;
 	}
-
 
 	$dir = $self->get_build_directory();
 	if (not -d "$buildpath/$dir") {
@@ -1561,11 +1553,8 @@ EOF
 	close(CONTROL) or die "can't write control file for ".$self->get_fullname().": $!\n";
 
 	### update Mach-O Object List
-	###
-	### (but not for distributions prior to 10.3)
 
 	our %prebound_files = ();
-	if ($config->param("Distribution") > 10.2) {
 
 	eval {
 		require File::Find;
@@ -1640,7 +1629,6 @@ EOF
 			close(DEPS);
 		}
 	}
-    } # conditional on distribution > 10.2
 
 	### create scripts as neccessary
 
